welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: not found: value getColorSol
if (estFaceMur) return false else { avance(); if (getColorSol == Color.green) {recule(); return true } else return false  
                                                  ^